force-app/main/default/objects/Volunteer_Skills_and_Interests_Listing__c/Volunteer_Skills_and_Interests_Listing__c.object-meta.xml
<CustomObject>
    <label>Volunteer Skills and Interests Listing</label>
    <nameField>
        <label>Volunteer Skills and Interests Listing N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Skills and Interests Listing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>