force-app/main/default/objects/Volunteer_Skills_and_Interests_Listing__c/fields/Associated_Committees__c.field-meta.xml
<CustomField>
    <fullName>Associated_Committees__c</fullName>
    <label>Associated Committees</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>