force-app/main/default/objects/Volunteer_Skills_and_Interests_Listing__c/fields/External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>External_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>