force-app/main/default/objects/Volunteer_Skills_and_Interests_Listing__c/fields/Skill_Buckets__c.field-meta.xml
<CustomField>
    <fullName>Skill_Buckets__c</fullName>
    <label>Skill Buckets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Community Leadership</fullName>
            </value>
            <value>
                <fullName>Development/Nonprofit Advancement</fullName>
            </value>
            <value>
                <fullName>Engagement &amp; Stewardship</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Future Chair</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Innovation &amp; Growth</fullName>
            </value>
            <value>
                <fullName>Solicitation</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Staff Talent</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>