force-app/main/default/objects/Volunteer_Skills_and_Interests_Listing__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer Experience</fullName>
            </value>
            <value>
                <fullName>Volunteer Interests</fullName>
            </value>
            <value>
                <fullName>Volunteer Skills/Expertise</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
                <isActive>false</isActive>
                <label>Interest</label>
            </value>
            <value>
                <fullName>Skill</fullName>
                <isActive>false</isActive>
                <label>Skill</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>