force-app/main/default/objects/Volunteer_Skills_and_Interests_Listing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Skill_Buckets__c</columns>
    <columns>Associated_Committees__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>